<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.diasfu.academytutorialapp.DisplayFormActivity"

    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/form_screen_greetings"
        android:textSize="25dp"
        android:textColor="@color/black"
        android:gravity="center"
        />

    <!--you use id for in other to retain the information when the phone is rotated-->

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/form_enter_name_hint"
        android:hint="@string/enter_name_hint"
        android:inputType="textPersonName"
        android:layout_marginBottom="30dp"
        android:textSize="30dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/form_enter_age_hint"
        android:inputType="number"
        android:hint="@string/user_age_hint"
        android:layout_marginBottom="30dp"
        android:textSize="30dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/form_enter_email_hint"
        android:inputType="textEmailAddress"
        android:hint="@string/user_email_hint"
        android:layout_marginBottom="30dp"
        android:textSize="30dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/form_enter_phone_hint"
        android:inputType="phone"
        android:hint="@string/user_phone_hint"
        android:layout_marginBottom="20dp"
        android:textSize="30dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/submit_button"
        android:textSize="20dp"
        android:onClick="onSubmitPressed"/>

</LinearLayout>

    </ScrollView>